--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     </main>
     <footer>
         <hr>
-        Conn's Ewbsite
+        This is for
+        <a href="https://instructure.charlotte.edu/courses/252817">
+            front-end web dev
+        </a>
     </footer>
 </body>
 </html>
